FIND_PACKAGE(Poco)

IF(POCO_FOUND)

if(UNIX)
   set(RPATH_LINK_FLAG "-Wl,-rpath-link,${POCO_DIR}/lib64")
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${RPATH_LINK_FLAG}")
endif(UNIX)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIRS} ${POCO_INCLUDE_DIR})
SET(TARGET_LIBRARIES_VARS OSG_LIBRARY OSGDB_LIBRARY OSGUTIL_LIBRARY OSGVIEWER_LIBRARY OPENTHREADS_LIBRARY POCO_FOUNDATION_LIBRARY POCO_NET_LIBRARY POCO_UTIL_LIBRARY)

    SET(TARGET_SRC
    osgearth_server.cpp
 )

    #### end var setup  ###
    SETUP_APPLICATION(osgearth_server)

ENDIF(POCO_FOUND)